# cmdwrap

./: .gitignore  README.md  pyproject.toml  setup.cfg
cmdwrap/: __init__.py  main.py
src/cmdwrap/: __init__.py  main.py  meta.py
src/cmdwrap/cli/: wrap.py
