[metadata]
name = cmdwrap
version = attr: cmdwrap.meta.VERSION
description = Wrap shell commands for your convenience
url = https://github.com/ru5j4r0/cmdwrap
author = ru5j4r0
author_email = 59990307+ru5j4r0@users.noreply.github.com
long_description = file: README.md
license = Apache-2.0
license_files = LICENSE

classifiers =
  Development Status :: 2 - Pre-Alpha
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  Intended Audience :: System Administrators
  License :: OSI Approved :: Apache Software License
  Natural Language :: English
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Software Development :: User Interfaces
  Topic :: System :: Shells
  Topic :: System :: System Shells
  Topic :: Terminals
  Topic :: Utilities

keywords =
  shell
  command
  cmd
  cli
  cui
  interface
  terminal
  console
  wrapper
  wrap

[options]
python_requires = >=3.8
packages = find:
package_dir =
  = src
install_requires =
  piest@git+https://github.com/ru5j4r0/piest.git

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  wrap = cmdwrap.cli.wrap:main

